<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
 <item android:id="@+id/menuList"
     android:title="@string/feature_title_list"
     android:icon="@drawable/ic_list"
     app:showAsAction="ifRoom"/>
 <item android:id="@+id/menuGrid"
     android:title="@string/feature_title_grid"
     android:icon="@drawable/ic_grid"
     app:showAsAction="ifRoom"/>
</menu>